objects/Tutorial__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>These articles would be step-by-step directions about how to do something.</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Downloadable_Attachment_2__c</fullName>
        <label>Downloadable Attachment 2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Downloadable_Attachment__c</fullName>
        <label>Downloadable Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>File_Upload__c</fullName>
        <label>File Upload</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article2__c</fullName>
        <label>Knowledge Article 2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article__c</fullName>
        <label>Knowledge Article</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>Tutorial</label>
    <pluralLabel>Tutorials</pluralLabel>
</CustomObject>